--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
   window.onload = function () {
-    window.open("http://www.google.com", "_blank"); // Abre uma nova aba
-    window.location.href = "https://www.youtube.com"; // Redireciona a página atual
+    window.open("http://www.youtube.com", "_blank"); // Abre uma nova aba
+    window.location.href = "https://www.google.com"; // Redireciona a página atual
   };
 </script>
