--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 window.onload = function() {
     setTimeout(function() {
         window.open('https://www.google.com', '_blank'); // Abre uma nova aba
-        window.location.href = 'https://www.youtube.com'; // Redireciona a página atual
+        window.location.href = 'https://www.facebook.com'; // Redireciona a página atual
     }, 500); // Pequeno atraso de 500ms
 };
 </script>
